# temp-mail-api

./: .gitignore  README.md  pyproject.toml
src/temp_mail_api/: __init__.py  checker.py  cli.py  legacy_cli.py
