[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "temp-mail-api"
version = "1.0.0"
description = "Email validation CLI for temporary and disposable mail workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "realine0" }]
keywords = ["email-validation", "temporary-email", "disposable-email", "cli"]
dependencies = ["requests>=2.31.0"]

[project.scripts]
temp-mail-check = "temp_mail_api.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
